# pico-mnist

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  compile.sh  pico_vision.uf2  tinygrad_compile_mnist.py
src/: CMakeLists.txt  main.c  main.cpp  main2.c
src/lib/: mnist.h
